# hexmind

./: .env.example  .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-runtime.txt  run_local_web.py  start-local.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/public/: open-source-boundary.md  sharing-assets.md
personas/business/: product-manager.yaml
personas/general/: facilitator.yaml
personas/tech/: backend-engineer.yaml
scripts/: generate_persona.py  prepare_public_repo.py  rebuild_prompt_library.py  render_readme_demo_gif.py
src/hexmind/: __init__.py  __main__.py  cli.py  config.py  discussion_contract.py  discussion_profiles.py  model_catalog.py  user_settings_contract.py
src/hexmind/api/: __init__.py  app.py  registry.py  routes_analytics.py  routes_archive_personas.py  routes_auth.py  routes_billing.py  routes_chat.py  routes_clerk_webhooks.py  routes_discussions.py  routes_prompts.py  (+9 more)
tests/: conftest.py  test_api.py  test_archive.py  test_asset_loader_paths.py  test_budget.py  test_clerk_auth.py  test_cli.py  test_compressor.py  test_config.py  test_convergence.py  test_database.py  test_knowledge.py  test_litellm_wrapper.py  test_models.py  test_orchestrator.py  test_prompt_library.py  test_public_repo_export.py  test_token_accountant.py  test_tree.py  test_validator.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+101 files in other folders)
