[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexmind"
version = "0.1.0"
description = "Six Hats Multi-Expert AI Decision Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
    "litellm>=1.40,<2.0",
    "instructor>=1.0,<2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=3.0",
    "llmlingua>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
hexmind = "hexmind.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/hexmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
